--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -3,66 +3,36 @@
  @author Miquéias Rodrigues
 */
 
-/************* Smartphone portrait ************/
-
-/***************** Cabeçalho ******************/
+/* HEADER DESKTOP */
 header {
-  height: 105px;
-}
-
-#h3 {
-  display: none;
+  height: 140px;
 }
 
 #logo img {
-  width: 101px;
-  height: 101px;
+  width: 150px;
+  height: 150px;
   margin: 3px 0;
 }
 
-#check {
-  display: none;
-}
-
-label {
-  font-size: 2em;
-  color: var(--pretoLayout);
-  position: fixed;
-  top: 20px;
-  right: 10px;
-}
-
 nav ul {
-  background: none;
+  display: flex;
   list-style: none;
-  background-color: var(--Vermelho-rgb);
-  height: 100vh;
-  position: fixed;
-  top: 104px;
-  right: -70%;
-  /*Estratégia para 
-    recolher o menu*/
-  width: 70%;
-  transition: all 0.7s;
-  z-index: 1;
-}
-
-/* Ativar o checkbox referente a ul*/
-
-#check:checked ~ ul {
-  right: 0px;
-  z-index: 1;
-}
-
-nav ul li {
-  border-bottom: 0.5px solid var(--pretoLayout);
-  text-align: right;
-  padding: 15px;
-  z-index: 1;
+  gap: 30px;
+  margin-top: 50px;
 }
 
 nav ul li a {
   text-decoration: none;
-  color: var(--textcolor);
-  z-index: 1;
+  color: black;
+  transition: 0.5s;
 }
+
+nav ul li a:hover {
+  color: #a80f2d;
+}
+
+/* Esconder menu hamburguer no desktop */
+#check, label {
+  display: none;
+}
+
