--- a/assets/css/global/variables.css
+++ b/assets/css/global/variables.css
@@ -33,4 +33,5 @@
   --Vermelho-rgb: rgba(221, 98, 98, 0.86);
   --DarkCyan: rgba(0, 139, 139, 0.86);
   --colorlinkedin: #258dbf;
+  --VermelhoEscuro: #b22222;
 }
